WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
92127
[Chromium] Fix up includes in HarfBuzzNGFace.h
https://bugs.webkit.org/show_bug.cgi?id=92127
Summary
[Chromium] Fix up includes in HarfBuzzNGFace.h
Andrew Wilson
Reported
2012-07-24 09:06:30 PDT
EFL is moving to use HarfBuzz and they want to use a newer version. This means that the forward declarations in HarfBuzzNGFace.h won't work for them (there's a conflict). Unfortunately, for some reason just including <hb.h> in that file instead of doing the forward declarations doesn't work. We've #ifdef'd the code to get it compiling again, but someone with knowledge of how we're including HarfBuzz should take a look. Assigning to bashi@ since he touched that file last.
Attachments
Patch
(15.13 KB, patch)
2012-07-24 20:01 PDT
,
Kenichi Ishibashi
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from gce-cr-linux-05
(1.03 MB, application/zip)
2012-07-24 20:43 PDT
,
WebKit Review Bot
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Kenichi Ishibashi
Comment 1
2012-07-24 17:20:41 PDT
Why forward declarations don't work? In any case, hb-ng has renamed _hb_font_t and _hb_face_t recently so we need to update the forward declarations in HarfBuzzNGFace.h.
Kenichi Ishibashi
Comment 2
2012-07-24 20:01:34 PDT
Created
attachment 154227
[details]
Patch
Kenichi Ishibashi
Comment 3
2012-07-24 20:03:51 PDT
Ccing mitz just in case because this patch modifies FontPlatformData.h Moritta, could you take a look?
WebKit Review Bot
Comment 4
2012-07-24 20:43:02 PDT
Comment on
attachment 154227
[details]
Patch
Attachment 154227
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/13345084
New failing tests: fast/loader/loadInProgress.html fast/inline/positionedLifetime.html fast/loader/unload-form-post-about-blank.html
WebKit Review Bot
Comment 5
2012-07-24 20:43:06 PDT
Created
attachment 154236
[details]
Archive of layout-test-results from gce-cr-linux-05 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: gce-cr-linux-05 Port: <class 'webkitpy.common.config.ports.ChromiumXVFBPort'> Platform: Linux-2.6.39-gcg-201203291735-x86_64-with-Ubuntu-10.04-lucid
Hajime Morrita
Comment 6
2012-07-24 22:06:04 PDT
Comment on
attachment 154227
[details]
Patch rs=me. Couldn't have side effect with this kind of change.
Kenichi Ishibashi
Comment 7
2012-07-24 23:43:57 PDT
Comment on
attachment 154227
[details]
Patch Thanks!
WebKit Review Bot
Comment 8
2012-07-25 01:19:21 PDT
Comment on
attachment 154227
[details]
Patch Clearing flags on attachment: 154227 Committed
r123586
: <
http://trac.webkit.org/changeset/123586
>
WebKit Review Bot
Comment 9
2012-07-25 01:19:24 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug