[Chromium] Fix up includes in HarfBuzzNGFace.h https://bugs.webkit.org/show_bug.cgi?id=92127

Reviewed by Hajime Morita.

Move constructors of FontPlatformData from headers to corresponding cpp files
so that we can use forward declaration for HarfBuzzNGFace instead of including HarfBuzzNGFace.h.
This way we can include hb.h in HarfBuzzNGFace.h.

No new tests. No changes in behavior.

* platform/graphics/FontPlatformData.cpp:
(WebCore::FontPlatformData::FontPlatformData): Moved from header file.
(WebCore):
* platform/graphics/FontPlatformData.h:
(WebCore):
(FontPlatformData): Moved to cpp file.
* platform/graphics/cocoa/FontPlatformDataCocoa.mm: Include HarfBuzzNGFace.h
* platform/graphics/harfbuzz/FontPlatformDataHarfBuzz.cpp:
(WebCore::FontPlatformData::FontPlatformData): Moved from header file.
(WebCore):
* platform/graphics/harfbuzz/FontPlatformDataHarfBuzz.h:
(WebCore):
(FontPlatformData): Moved to cpp file.
* platform/graphics/harfbuzz/ng/HarfBuzzNGFace.h: Include hb.h.


Canonical link: https://commits.webkit.org/110026@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123586 268f45cc-cd09-0410-ab3c-d52691b4dbfc